// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text only: basic 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": 0,
    "value": "hello world!",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
    },
    "type": 8,
    "value": "",
  },
]
`;

exports[`Text only: multiline 1`] = `
Array [
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 2,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": 0,
    "value": "hello
world!",
  },
  Object {
    "loc": Object {
      "end": Object {
        "column": 7,
        "line": 2,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 7,
        "line": 2,
        "offset": 12,
      },
    },
    "type": 8,
    "value": "",
  },
]
`;
